--- a/core/src/components/item/item.md.scss
+++ b/core/src/components/item/item.md.scss
@@ -86,6 +86,20 @@
   --show-inset-highlight: 0;
 }
 
+:host(.item-fill-outline) .item-highlight {
+  --position-offset: calc(-1 * var(--border-width));
+
+  @include position(var(--position-offset), null, null, var(--position-offset));
+
+  width: calc(100% + 2 * var(--border-width));
+  height: calc(100% + 2 * var(--border-width));
+
+  transition: none;
+}
+
+:host(.item-fill-outline.item-has-focus) .item-native {
+  border-color: transparent;
+}
 
 // Material Design Multi-line Item
 // --------------------------------------------------
@@ -169,7 +183,7 @@
   font-size: $item-md-note-slot-font-size;
 }
 
-::slotted(ion-note[slot]):not(::slotted([slot="helper"], [slot="error"])) {
+::slotted(ion-note[slot]:not([slot="helper"]):not([slot="error"])) {
   @include padding($item-md-note-slot-padding-top, $item-md-note-slot-padding-end, $item-md-note-slot-padding-bottom, $item-md-note-slot-padding-start);
 }
 
@@ -354,7 +368,6 @@
   --native-padding-left: 16px;
 
   @include border-radius(4px);
-  // border: none;
 }
 
 :host(.item-fill-outline) .item-native:hover {
@@ -372,10 +385,10 @@
 }
 
 
-:host(.item-fill-outline.item-has-focus) .item-native ::slotted(ion-input:not(:first-child)),
-:host(.item-fill-outline.item-has-value) .item-native ::slotted(ion-input:not(:first-child)),
-:host(.item-fill-outline.item-has-focus) .item-native ::slotted(ion-textarea:not(:first-child)), 
-:host(.item-fill-outline.item-has-value) .item-native ::slotted(ion-textarea:not(:first-child)) {
+:host(.item-fill-outline.item-label-floating.item-has-focus) .item-native ::slotted(ion-input:not(:first-child)),
+:host(.item-fill-outline.item-label-floating.item-has-value) .item-native ::slotted(ion-input:not(:first-child)),
+:host(.item-fill-outline.item-label-floating.item-has-focus) .item-native ::slotted(ion-textarea:not(:first-child)), 
+:host(.item-fill-outline.item-label-floating.item-has-value) .item-native ::slotted(ion-textarea:not(:first-child)) {
   transform: translateY(-25%);
 }
 
