--- a/core/src/components/item/test/fill/index.html
+++ b/core/src/components/item/test/fill/index.html
@@ -22,13 +22,7 @@
     </ion-header>
 
     <ion-content id="content" class="ion-padding">
-      <ion-item fill="outline">
-        <ion-icon slot="start" name="calendar-clear-outline"></ion-icon>
-        <ion-label position="floating">Standard</ion-label>
-        <ion-input value="Has Initial Value"></ion-input>
-        <ion-note slot="helper">Helper Text</ion-note>
-      </ion-item>
-      <!-- <p>Filled</p>
+      <p>Filled</p>
       <ion-grid>
         <ion-row>
           <ion-col>
@@ -425,8 +419,7 @@
             </ion-item>
           </ion-col>
         </ion-row>
-      </ion-grid> -->
-
+      </ion-grid>
     </ion-content>
   </ion-app>
 </body>
